# xalmascarpone_logs

./: .gitmodules  CMakeLists.txt  initialize.sh  package.json
src/: Client.cpp  Client.hpp  Global.hpp  IOServicePool.cpp  IOServicePool.hpp  LogMessage.cpp  LogMessage.hpp  LogsProcessorClient.cpp  LogsProcessorClient.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  main.cpp
